--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@ionic/app-scripts": "^3.1.9",
+    "bitcoinaverage": "^1.2.1",
     "bootstrap": "^4.1.1",
     "cross-spawn": "^6.0.5"
   }
